--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pevtab",
-  "description": "PostgreSQL Explain Visualizer in a Tab",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "description": "PostgreSQL Explain Visualizer in a Tab",
   "type": "module",
   "scripts": {
     "dev": "wxt",
@@ -12,6 +12,9 @@
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "vue-tsc --noEmit",
+    "format": "oxfmt --write .",
+    "format:check": "oxfmt --check .",
+    "lint": "oxlint",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
@@ -22,6 +25,8 @@
   },
   "devDependencies": {
     "@wxt-dev/module-vue": "^1.0.3",
+    "oxfmt": "^0.32.0",
+    "oxlint": "^1.47.0",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.2.4",
     "wxt": "^0.20.15"
