--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "format": "oxfmt --write .",
     "format:check": "oxfmt --check .",
     "lint": "oxlint",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
@@ -24,10 +27,15 @@
     "vue": "^3.5.27"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^6.0.4",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vue/test-utils": "^2.4.6",
     "@wxt-dev/module-vue": "^1.0.3",
+    "happy-dom": "^20.6.1",
     "oxfmt": "^0.32.0",
     "oxlint": "^1.47.0",
     "typescript": "^5.9.3",
+    "vitest": "^4.0.18",
     "vue-tsc": "^3.2.4",
     "wxt": "^0.20.15"
   }
