--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vitejs/plugin-vue": "^6.0.4",
     "@vitest/coverage-v8": "^4.0.18",
     "@vue/test-utils": "^2.4.6",
+    "@wxt-dev/auto-icons": "^1.1.0",
     "@wxt-dev/module-vue": "^1.0.3",
     "happy-dom": "^20.6.1",
     "oxfmt": "^0.32.0",
