--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
+    "test:e2e": "wxt build && playwright test",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
