--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "pev2": "^1.20.1",
+    "sql-formatter": "^15.7.2",
     "uuid": "^13.0.0",
     "vue": "^3.5.28"
   },
